
[package]
name = "daft"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
rand = "0.8.5"
rabe = { path = "rabe" }
mk256 = { path = "mk256" }
aes = "0.8.3"
ctr = "0.9.2"
rand_chacha = "0.3.1"
sha256-rs = "1.0.1"
openssl = { version="0.10.57", features=["vendored"] }
log = "0.4.20"
pretty_env_logger = "0.5.0"
ed25519-dalek = { version = "2.0.0",  features=["rand_core"] }
serde={ "version" = "1.0.188" }
sha2 = { version="0.10.8", features=["asm"] }
bincode = "1.3.3"
csv = "1.3.0"
indicatif = "0.17.7"
rayon = "1.8.0"
sha3 = "0.10.8"
hmac-sha256 = "1.1.7"
ascon-hash = "0.2.0"
digest = "0.10.7"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }




[[bench]]
name = "primitives"
harness = false

[[bench]]
name = "daft"
harness = false

[[bench]]
name = "csv"
harness = false
