[package]
name = "mk256"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "hash"
harness = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
sha2 = "0.10.8"
tiger = "0.2.1"
rayon = "1.8.0"

[dev-dependencies]
ascon-hash = "0.2.0"
belt-hash = "0.1.0"
criterion = { version = "0.4", features = ["html_reports"] }
fsb = "0.1.3"
groestl = "0.10.1"
jh = "0.1.0"
k12 = "0.3.0"
ripemd = "0.1.3"
sha1 = "0.10.6"
sha3 = "0.10.8"
shabal = "0.4.1"
skein = "0.1.0"
sm3 = "0.4.2"
whirlpool = "0.10.4"
